type: <fix> action: <fixed nav-bar z-index lower than social-media icon>

--- a/style/style.scss
+++ b/style/style.scss
@@ -104,7 +104,7 @@
     @include flexCenter(column);
     transition: transform 0.5s ease-in;
     background: #222;
-    z-index: 1;
+    z-index: 4;
   }
 
   .nav-bar li {
@@ -118,7 +118,7 @@
     position: relative;
     display: block;
     cursor: pointer;
-    z-index: 1;
+    z-index: 4;
   }
 
   .nav-bar-active {
